Update azure-pipelines-9.yml for Azure Pipelines

--- a/azure-pipelines-9.yml
+++ b/azure-pipelines-9.yml
@@ -26,8 +26,8 @@ stages:
           $keyVaultName = "$(keyVaultName)"
           $secretName = "$(secretName)"
 
-          # Login to Azure (if not already logged in)
-          Connect-AzAccount -DeviceCode
+          # # Login to Azure (if not already logged in)
+          # Connect-AzAccount
 
           # Get the Data Factory
           $dataFactory = Get-AzDataFactoryV2 -ResourceGroupName $resourceGroupName -Name $dataFactoryName
