--- a/azure-pipelines-9.yml
+++ b/azure-pipelines-9.yml
@@ -54,6 +54,7 @@ stages:
           }
            Write-Output "Role assignment start "
           # Assign the Key Vault Secrets User role to the Data Factory's managed identity
+          Write-Output "Key Vault Resource Id '$keyVault.ResourceId' "
           New-AzRoleAssignment -ObjectId $principalId -RoleDefinitionName "Key Vault Secrets User" -Scope $keyVault.ResourceId
           Write-Output "Role assignment End "
           Write-Output "Granted 'Key Vault Secrets User' role to Data Factory '$dataFactoryName' for Key Vault '$keyVaultName'."
