Update azure-pipelines-9.yml for Azure Pipelines

--- a/azure-pipelines-9.yml
+++ b/azure-pipelines-9.yml
@@ -56,7 +56,7 @@ stages:
           # Assign the Key Vault Secrets User role to the Data Factory's managed identity
           Write-Output "Key Vault Resource Id '$keyVault.ResourceId' "
           # New-AzRoleAssignment -ObjectId $principalId -RoleDefinitionName "Key Vault Secrets User" -Scope $keyVault.ResourceId
-          New-AzRoleAssignment  -ObjectId eba63296-87f7-4d35-a2b4-24503e773896 -RoleDefinitionName "Key Vault Administrator" -Scope "/subscriptions/cb9ac514-a7d4-4892-8b9d-537c4ad22fb3/resourceGroups/dev12-smartpos-rg/providers/Microsoft.KeyVault/vaults/dev12smartposkeyvalut"
+          New-AzRoleAssignment  -ObjectId eba63296-87f7-4d35-a2b4-24503e773896 -RoleDefinitionName "Key Vault Certificate User" -Scope "/subscriptions/cb9ac514-a7d4-4892-8b9d-537c4ad22fb3/resourceGroups/dev12-smartpos-rg/providers/Microsoft.KeyVault/vaults/dev12smartposkeyvalut"
            Write-Output "Granted 'Key Vault Secrets User' role to Data Factory '$dataFactoryName' for Key Vault '$keyVaultName'."
            Write-Output "Granted access "
           # Test access by trying to get the secret
