--- a/azure-pipelines-9.yml
+++ b/azure-pipelines-9.yml
@@ -32,7 +32,14 @@ stages:
 
            # Assign the Key Vault Secrets User role to the Data Factory's managed identity
            az role assignment create --assignee $dataFactory --role "Key Vault Secrets User" --scope $keyVaultId
-                Write-Output "Granted 'Key Vault Secrets User' role to Data Factory '$dataFactoryName' for Key Vault '$keyVaultName'.
-
+          Write-Output "Granted 'Key Vault Secrets User' role to Data Factory '$dataFactoryName' for Key Vault '$keyVaultName'
+           # Test access by trying to get the secret
+          try {
+              $secretValue = Get-AzKeyVaultSecret -VaultName $(keyVaultName) -Name $(secretName)
+              Write-Output "Successfully retrieved the secret '$($secretValue.Name)'. Value: $($secretValue.SecretValueText)"
+          } catch {
+              Write-Error "Failed to retrieve the secret '$($secretName)'. Error: $_"
+              exit 1
+          }
           }
         azurePowerShellVersion: 'LatestVersion'
