--- a/azure-pipelines-10.yml
+++ b/azure-pipelines-10.yml
@@ -21,50 +21,41 @@ stages:
         ScriptType: 'InlineScript'
         Inline: |
           # Parameters
-          $resourceGroupName = "$(resourceGroup)"
-          $dataFactoryName = "$(dataFactoryName)"
-          $keyVaultName = "$(keyVaultName)"
-          $secretName = "$(secretName)"
+           userPrincipalName: "Rajendraprasad_Cheedalla@epam.com"  # The email or UPN of the user
+           roleDefinitionName: "User Access Administrator"        # The role you want to assign
+           scope: "/subscriptions/{subscription-id}" # Replace with your subscription ID
 
-          # # Login to Azure (if not already logged in)
-          # Connect-AzAccount
-          Write-Output "Data Factory Start "
-          # Get the Data Factory
-          $dataFactory = Get-AzDataFactoryV2 -ResourceGroupName $resourceGroupName -Name $dataFactoryName
-          Write-Output "Data Factory End"
+            resources:
+          - type: Microsoft.Authorization/roleAssignments
+            apiVersion: 2020-04-01
+             name: "[guid(parameters('userPrincipalName'), parameters('roleDefinitionName'), parameters('scope'))]"
+            properties:
+            roleDefinitionId: "[concat('/providers/Microsoft.Authorization/roleDefinitions/', guid(parameters('roleDefinitionName')))]"
+            principalId: "[reference(concat('/providers/Microsoft.Directory/Users/', parameters('userPrincipalName')), '2020-04-01').id]"
 
-          if (-not $dataFactory) {
-              Write-Error "Data Factory '$dataFactoryName' does not exist in resource group '$resourceGroupName'."
-              exit 1
-          }
-          else
-          {
-             Write-Output "Data Factory '$dataFactoryName' exist in resource group '$resourceGroupName'."
-          }
+          outputs:
+          roleAssignmentId:
+            type: string
+            value: "[concat('Role Assignment ID: ', name)]"
 
-          # Get the principal ID of the Data Factory's managed identity
-          $principalId = $dataFactory.Identity.PrincipalId
-           Write-Output "PrincipalId '$principalId' "
-          # Get the Key Vault resource ID
-          $keyVault = Get-AzKeyVault -VaultName $keyVaultName -ResourceGroupName $resourceGroupName
-          Write-Output "Key Vault '$keyVault' "
-          if (-not $keyVault) {
-              Write-Error "Key Vault '$keyVaultName' does not exist in resource group '$resourceGroupName'."
-              exit 1
-          }
-           Write-Output "Role assignment start "
-          # Assign the Key Vault Secrets User role to the Data Factory's managed identity
-          Write-Output "Key Vault Resource Id '$keyVault.ResourceId' "
-          # New-AzRoleAssignment -ObjectId $principalId -RoleDefinitionName "Key Vault Secrets User" -Scope $keyVault.ResourceId
-          New-AzRoleAssignment  -ObjectId eba63296-87f7-4d35-a2b4-24503e773896 -RoleDefinitionName "Key Vault Reader" -Scope "/subscriptions/cb9ac514-a7d4-4892-8b9d-537c4ad22fb3/resourceGroups/dev12-smartpos-rg/providers/Microsoft.DataFactory/factories/dev12smartposadf"
-           Write-Output "Granted 'Key Vault Reader' role to Data Factory '$dataFactoryName' for Key Vault '$keyVaultName'."
-           Write-Output "Granted access "
-          # Test access by trying to get the secret
-          try {
-              $secretValue = Get-AzKeyVaultSecret -VaultName $keyVaultName -Name $secretName
-              Write-Output "Successfully retrieved the secret '$($secretValue.Name)'. Value: $($secretValue.SecretValueText)"
-          } catch {
-              Write-Error "Failed to retrieve the secret '$($secretName)'. Error: $_"
-              exit 1
+          script:
+          # PowerShell script to create a role assignment
+        
+          $userPrincipalName = "$(userPrincipalName)"
+          $roleDefinitionName = "$(roleDefinitionName)"
+          $scope = "$(scope)"
+
+          # Get the user's object ID
+          $user = Get-AzADUser -UserPrincipalName $userPrincipalName
+          $userId = $user.Id
+
+          # Get the role definition ID
+          $roleDefinition = Get-AzRoleDefinition -Name $roleDefinitionName
+          $roleDefinitionId = $roleDefinition.Id
+
+          # Create the role assignment
+          New-AzRoleAssignment -ObjectId $userId -RoleDefinitionId $roleDefinitionId -Scope $scope
+
+           
           }
         azurePowerShellVersion: 'LatestVersion'
