Update azure-pipelines-10.yml for Azure Pipelines

--- a/azure-pipelines-10.yml
+++ b/azure-pipelines-10.yml
@@ -40,7 +40,7 @@ stages:
 
           script:
           # PowerShell script to create a role assignment
-        
+          Write-Output " Start "
           $userPrincipalName = "$(userPrincipalName)"
           $roleDefinitionName = "$(roleDefinitionName)"
           $scope = "$(scope)"
