--- a/azure-pipelines-10.yml
+++ b/azure-pipelines-10.yml
@@ -9,7 +9,7 @@ variables:
   resourceGroup: 'dev12-smartpos-rg'             # Resource group where the Data Factory and Key Vault reside
   keyVaultName: 'dev12smartposkeyvalut'              # Name of the Azure Key Vault
   dataFactoryName: 'dev12smartposadf'        # Name of the Azure Data Factory
-  secretName: 'testsecret'  
+  secretName: 'testsecret'
 stages:
 - stage: GrantAccess
   jobs:
@@ -26,7 +26,7 @@ stages:
            scope: "/subscriptions/{subscription-id}" # Replace with your subscription ID
 
             resources:
-          - type: Microsoft.Authorization/roleAssignments
+            type: Microsoft.Authorization/roleAssignments
             apiVersion: 2020-04-01
              name: "[guid(parameters('userPrincipalName'), parameters('roleDefinitionName'), parameters('scope'))]"
             properties:
