Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ pool:
 
 variables:
   resourceGroupName: 'myTestResourceGroup'
-  location: 'East US'
+  location: 'southindia'
   templateFile: '$(Build.ArtifactStagingDirectory)\armTemplate.json'
 
 steps:
